syntax = "proto3";

package nextcloudTalk;

// Googles protobuf package serving message struct Empty {}
import "google/protobuf/empty.proto";

// NextcloudTalk message types interacting with Nextcloud Talk API
service NextcloudTalk {
  rpc ReadChats(google.protobuf.Empty) returns (stream OutChat);
  rpc WriteChat(InChat) returns (google.protobuf.Empty);
}

message OutChat {
  int64 ID = 1;
  string Token = 2;
  string ActorID = 3;
  string ActorDisplayName = 4;
  string Message = 5;
}

message InChat {
  string Token = 1;
  string Message = 2;
}